--- a/assets/css/mixer.css
+++ b/assets/css/mixer.css
@@ -1,17 +1,13 @@
-.u-right {
-    width: 100%;
-    text-align: right;
-}
-
-.u-flex-center {
-    width: 100%;
-    height: 100vh;
+/* Display flex */
+.u-flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.u-flex {
+.u-flex-center {
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +25,7 @@
     align-items: center;
 }
 
+/* Input */
 .u-input {
     width: 100%;
     border: none;
@@ -37,9 +34,28 @@
     transition: var(--hover-transition);
 }
 
+/* Button */
 .u-btn {
     border: none;
     font-size: 16px;
     background-color: transparent;
     padding: 14px 55px;
+}
+
+/* Others */
+.u-white {
+    color: white;
+}
+
+.u-black {
+    color: black;
+}
+
+.u-right {
+    width: 100%;
+    text-align: right;
+}
+
+.u-title {
+    font-weight: normal;
 }
