--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,7 +9,6 @@
 }
 
 .c-form {
-    width: 100%;
     gap: 20px;
 }
 
@@ -18,12 +17,10 @@
 }
 
 .c-form__fields {
-    width: 100%;
     gap: 40px;
 }
 
 .c-form__group {
-    width: 100%;
     gap: 15px;
 }
 
@@ -41,6 +38,11 @@
 .c-form__input {
     --border-color-gray: #00000050;
     border-bottom: 2px solid var(--border-color-gray);
+    transition: var(--hover-transition);
+}
+
+.c-form__input:focus {
+    border-bottom: 2px solid var(--primary-color);
 }
 
 .c-form__signup-link {
