--- a/assets/css/mixer.css
+++ b/assets/css/mixer.css
@@ -25,6 +25,12 @@
     align-items: center;
 }
 
+/* Display grid */
+.u-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
 /* Input */
 .u-input {
     width: 100%;
@@ -57,5 +63,10 @@
 }
 
 .u-title {
+    font-size: 32px;
     font-weight: normal;
+}
+
+.u-width-100 {
+    width: 100%;
 }
