--- a/assets/css/mixer.css
+++ b/assets/css/mixer.css
@@ -1,13 +1,10 @@
 /* Display flex */
-.u-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.u-fullscreen {
+    width: 100%;
+    height: 100vh;
 }
 
 .u-flex-center {
-    width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +25,6 @@
 /* Display grid */
 .u-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
 }
 
 /* Input */
