--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -11,7 +11,7 @@
 }
 
 .c-navbar__primary {
-    padding: 36px 35px;
+    padding: 37px 35px;
     background-color: var(--navbar-color);
     flex-shrink: 5;
 }
@@ -21,26 +21,82 @@
     white-space: nowrap;
     font-weight: normal;
     letter-spacing: 1px;
+    cursor: pointer;
 }
 
 .c-navbar__secondary {
-    padding: 26px 20px 26px 150px;
+    padding: 30.5px 20px 30.5px 150px;
     background-color: var(--navbar-color);
 }
 
 .c-menu__list {
     width: 100%;
+    gap: 10px;
 }
 
 .c-menu__link {
-    font-size: 17px;
+    font-size: 18px;
     font-weight: normal;
-    padding: 15px 0px;
+    padding: 12px 0px;
     transition: var(--hover-transition);
     gap: 10px;
 }
 
+.c-menu__link:hover {
+    color: var(--primary-color);
+}
 
-.c-menu__link .c-menu__icon {
+.c-menu__icon {
     font-size: 28px;
+}
+
+.c-menu__mobile-btn {
+    display: none;
+    font-size: 24px;
+    padding: 9.5px 12px;
+    border-radius: 7px;
+    border: 2px solid var(--navbar-color);
+}
+
+.c-menu__mobile-btn:hover {
+    border-color: var(--white);
+}
+
+@media (max-width: 1285px) {
+    .c-navbar__secondary {
+        padding: 30px;
+        background-color: var(--navbar-color);
+    }
+}
+
+@media (max-width: 1125px) {
+    .c-navbar__secondary {
+        padding: 30.5px 20px;
+        background-color: var(--navbar-color);
+    }
+
+    .c-menu {
+        justify-content: right;
+    }
+
+    .c-menu__list {
+        display: none;
+    }
+
+
+    .c-menu__mobile-btn {
+        display: block;
+    }
+}
+
+@media (max-width: 700px) {
+    .c-navbar {
+        gap: 0px;
+    }
+
+    .c-navbar__primary {
+        padding: 37px 20px;
+        background-color: var(--navbar-color);
+        flex-shrink: 10;
+    }
 }
