--- a/assets/css/mixer.css
+++ b/assets/css/mixer.css
@@ -4,6 +4,10 @@
     height: 100vh;
 }
 
+.u-flex {
+    display: flex;
+}
+
 .u-flex-center {
     display: flex;
     justify-content: center;
@@ -70,11 +74,10 @@
     content: '';
     width: 0%;
     height: 2.5px;
-    bottom: 5px;
+    bottom: 0;
     left: 50%;
-   
     transform: translateX(-50%);
-    background-color: var(--white);
+    background-color: var(--primary-color);
     transition: var(--fx-transition);
     position: absolute;
 }
