--- a/assets/css/dashboard-main.css
+++ b/assets/css/dashboard-main.css
@@ -1,5 +1,6 @@
 .main-content {
     padding: 35px 20px;
+    gap: 100px;
 }
 
 /* Top contents */
@@ -54,3 +55,34 @@
 }
 
 /* Cards */
+.card {
+    gap: 15px;
+}
+
+.card__wrapper {
+    padding: 30px 30px 30px 50px;
+    align-items: flex-start;
+    border: 2.5px solid rgba(0, 0, 0, 0.211);
+    background-color: var(--white);
+    gap: 10px;
+}
+
+.card__icon {
+    font-size: 28px;
+    color: var(--primary-color);
+}
+
+.card__body {
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.card__title {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.card__paragraph {
+    text-align: right;
+    font-size: 17px;
+}
