--- a/assets/css/mixer.css
+++ b/assets/css/mixer.css
@@ -20,6 +20,11 @@
     align-items: center;
 }
 
+.u-flex-column2 {
+    display: flex;
+    flex-direction: column;
+}
+
 .u-flex-between {
     display: flex;
     justify-content: space-between;
@@ -61,7 +66,7 @@
     white-space: nowrap;
     background-color: var(--btn-gray-color);
     transition: var(--hover-transition);
-    padding: 15px 65px;
+    padding: 16px 65px;
 }
 
 .u-btn-primary:hover {
